heapuse-tests/tests/ui/fail-derive-too-many-attrs-1.stderr
error: too many heap attributes
 --> tests/ui/fail-derive-too-many-attrs-1.rs:6:7
  |
6 |     #[heap(add, add)]
  |       ^^^^^^^^^^^^^^
